WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265712
Borders, backgrounds, and other table cell properties are lost when pasting tables into TextEdit
https://bugs.webkit.org/show_bug.cgi?id=265712
Summary
Borders, backgrounds, and other table cell properties are lost when pasting t...
Wenson Hsieh
Reported
2023-12-01 18:15:07 PST
rdar://119035264
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-01 18:31:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21202
EWS
Comment 2
2023-12-04 09:13:19 PST
Committed
271485@main
(3acbb664bd93): <
https://commits.webkit.org/271485@main
> Reviewed commits have been landed. Closing PR #21202 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug