Source/WebCore/PAL/pal/PlatformMac.cmake
@@ -143,6 +143,7 @@ list(APPEND PAL_PUBLIC_HEADERS
     spi/mac/NSSpellCheckerSPI.h
     spi/mac/NSTextFinderSPI.h
     spi/mac/NSTextInputContextSPI.h
+    spi/mac/NSTextTableSPI.h
     spi/mac/NSUndoManagerSPI.h
     spi/mac/NSViewSPI.h
     spi/mac/NSWindowSPI.h
